2010-04-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/linking.m
	* Source/GSDisplayServer.m
	* Source/NSWorkspace.m
	* Source/NSButtonCell.m
	* Source/NSSplitView.m
	* Source/GSNibLoading.m
	* Source/NSCursor.m
	* Source/NSScroller.m
	* Source/NSOutlineView.m
	* Source/GSToolbarView.m
	* Source/GSPDFPrintOperation.m
	* Source/GSThemePanel.m
	* Source/NSImage.m
	* Source/NSTableView.m
	* Source/GSDragView.m: Remove compiler warnings detected by clang
	and reported by David Chisnall <theraven@gna.org>.

2010-04-09  David Ayers  <ayers@fsfe.org>

	* Headers/AppKit/NSSound.h: Import NSBundle.h for category declaration.

2010-04-08 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* Source/GSToolTips.m: Prevent Windows API callback from crashing when displaying tooltips.

2010-04-07 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Cocoa/Cocoa.h: One more forgotten header file changed
	from #include into #import.

2010-04-07 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSHbox.h
	* Headers/Additions/GNUstepGUI/GSHelpManagerPanel.h
	* Headers/Additions/GNUstepGUI/GSLayoutManager_internal.h
	* Headers/Additions/GNUstepGUI/GSTypesetter.h
	* Headers/Additions/GNUstepGUI/GSAnimator.h
	* Headers/Additions/GNUstepGUI/GSWindowDecorationView.h
	* Headers/Additions/GNUstepGUI/GSTextConverter.h
	* Headers/Additions/GNUstepGUI/GSPrintOperation.h
	* Headers/Additions/GNUstepGUI/GSServicesManager.h
	* Headers/Additions/GNUstepGUI/GSVbox.h
	* Headers/Additions/GNUstepGUI/GSHorizontalTypesetter.h
	* Headers/Additions/GNUstepGUI/GMAppKit.h
	* Headers/Additions/GNUstepGUI/GSTable.h
	* Headers/Additions/GNUstepGUI/GSMemoryPanel.h
	* Headers/Additions/GNUstepGUI/GSMethodTable.h
	* Headers/Additions/GNUstepGUI/GSDisplayServer.h
	* Headers/Additions/GNUstepGUI/GSToolbarView.h
	* Headers/Additions/GNUstepGUI/GSTheme.h
	* Headers/Additions/GNUstepGUI/GSPDFPrintOperation.h
	* Headers/Additions/GNUstepGUI/GSLayoutManager.h
	* Headers/Additions/GNUstepGUI/GSDragView.h